# dbt2superset6

./: .gitignore  README.md  pyproject.toml  reademe.md
docs/: layout.md
src/super6dbt/: __init__.py  chart_rules.py  cli.py  client.py  config.py  diagnose_chart.py  mapper.py  pull.py  push.py  test_charts.py  test_metrics.py  test_super6dbt.py  utils.py
